@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-19T01:54:00Z",
+  "timestamp" : "2022-11-19T08:26:20Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 641,
-  "uniques" : 405,
+  "count" : 642,
+  "uniques" : 406,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -44,6 +44,13 @@
       "timestamp": "2022-11-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
