@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 3,
   "clones": [
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-11-18T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
