@@ -1,3 +1,11 @@
+2022-11-19T08:26:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502754480 # 627
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 405 641
+* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 406 642
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-19]
+
 2022-11-19T01:54:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3501541873 # 626
 * notice: last 14d: unq all: 3 12
